--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <link href="/favicon.ico" rel="icon" type="favicon"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Pomodoro</title>
+  <title>Pomodoro Productivity </title>
 </head>
 <body>
 <div id="root"></div>
